--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,9 @@ body {
     font-family: 'Open Sans', sans-serif;
     display: flex;
     align-items: center;
-    justify-content: space-between; 
+    justify-content: space-between;
+    padding-top: 26px;
+    padding-bottom: 25px; 
 }
 .header-logo {
     /* только после этого появилась картинка */
@@ -24,10 +26,31 @@ body {
     list-style-type: none;
     display: flex;
     padding-left: 0 auto;
-    gap: 20px;
+    gap: 40px;
+}
+
+.header-nav a::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 3px;
+    border-radius: 1.5px;
+    background-color: transparent ;
+}
+
+.header-nav a.active::after {
+    content: '';    
+    background-color: #FFC725;
 }
 .header-nav a {
     text-decoration: none;
 
     
+}
+
+.container {
+    max-width: 1180px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
 }
