--- a/style/style.css
+++ b/style/style.css
@@ -72,17 +72,22 @@ body {
     /* flex: 0 0 49%; */
 }
 h1 {
+    display: block;
     font-family: Nunito Sans;
-    font-style: normal;
+    /* font-style: normal; */
     font-weight: bold;
     font-size: 79px;
+    margin-top: 8px;
+    line-height: 108px;
+
 }
-flex: 0 0 49%;
+
+/* flex: 0 0 49%;
 color: #fff;
 box-sizing: border-box;
 background-repeat: no-repeat;
 background-size: cover;
-background-position: center;
+background-position: center; */
 
 /* .basket {
     width: 49px;
