--- a/style/style.css
+++ b/style/style.css
@@ -253,8 +253,25 @@ main {
 
 .menu-grid {
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+.menu-grid-cover {    
+    width: 100%;
+    height: 430px;
+    position: relative;
+    overflow: hidden;
 }
 
+.menu-grid-img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    object-fit: cover;
+    width: 100%;
+    height: 430px;
+}
 .menu-header {
     display: flex;
     align-items: center;
@@ -289,19 +306,120 @@ main {
     margin-top: 140px;
 
 }
-.zavena--img-grid {
-    width: 300px;
+
+
+
+.menu-grid-title {
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 38px;
+    text-align: center;
+    color: #1B2A49;
 }
-.zamena, items {
-    display: grid;
+
+.menu-grid-price {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 28px;
+    text-align: center;
+    color: #979797;
+}
+
+.menu-grid-btn {
+    display: flex;
+    margin: 0 auto;   
+    padding: 10px 30px;
+    background: #FBB731;
+    border-radius: 5px;
+    cursor: pointer;
+    gap: 13px;
+}
+
+.menu-grid-icon {
+    display: block;
+    color: red;
+    background-image: url(../img/cart-menu.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 18px;
+    height: 18px;
+
     
-    width: 900px;
+}
+
+.menu-grid-text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 18px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #1E2F40;
+    
+
 
 }
-.menu-grid-cover {
-    width: ;
+/* ======section2 ========================*/
+.ololo {
+    border: solid 3px red;
+    height: 500px;
 }
-/* @media (min-width: 1349px) {} ================================================= */
+/* ====  footer  ================================*/
+
+.container2 {
+    max-width: 1180px;
+margin: 0 auto;
+display: flex;
+justify-content: space-between;
+}
+.footer {
+    background-color: #1e2f40;
+    color: #fff;
+    padding-top: 117px;
+    padding-bottom: 106px;
+}
+
+
+.item h2 {
+    font-size: 20px;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin-bottom: 12px;
+}
+
+.item ul,
+.tel ul {
+    list-style-type: none;
+}
+.item li {
+    margin-bottom: 9px;
+    font-family: 'Lato', sans-serif;
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 24px;
+}
+
+.item a {
+    color: #DEDEDE;
+    text-decoration: none;
+    font-weight: 400;
+    
+}
+.item span {
+    color: #DEDEDE;
+    display: block;
+    font-weight: 400;
+    margin-bottom: 2px;
+}
+
+.tel ul{
+    font-size: 20px;
+    color: #fbb731;
+}
+.tel li {
+    margin-bottom: 12px;
+}
+
+/*==== @media (min-width: 1349px) {} ================================================= */
 
 @media (max-width: 768px) {
     .header-nav a {       
